<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">TreningApp</string>
    <string name="content_description">Description</string>
    <string name="permission_label_watchit">Start WATCHiT service</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_stop_training">Stop training</string>
    <string name="action_reset_training">Reset training</string>
    <string name="action_settings">Settings</string>
    <string name="action_reality_check">Reality check</string>
    <string name="action_next_reflection">Next</string>
    <string name="action_finish_reflection">Finish</string>
    <string name="action_create_procedure">Save procedure</string>
    <string name="action_add_step">Add step</string>
    <string name="action_save_step">Save to library</string>
    <string name="action_use_template_step">Use template</string>
    
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_ok">OK</string>
    <string name="button_start">start</string>
    <string name="button_stop">stop</string>
    <string name="button_resume">resume</string>
    <string name="button_pause">pause</string>
    <string name="button_train">train</string>
    <string name="button_next">next</string>
    <string name="button_finish">finish</string>
    <string name="button_close">close</string>
    
    <!-- Main menu activity -->
    <string name="main_menu_activity_label">Main menu</string>
    <string-array name="main_menu_items_array">
        <item>Training</item>
        <item>Results</item>
        <item>Leaderboard</item>
    </string-array>
    
    <!-- Preview procedure activity -->
    <string name="procedure_preview_activity_label">Procedure preview</string>
    <string name="procedure_preview_activity_procedure_description">Tap to see details</string>
    <string name="procedure_preview_activity_procedure_description2">Long press to see details</string>
    
    <!-- Create procedure activity -->
    <string name="create_procedure_activity_label">Create procedure</string>
    <string name="create_procedure_activity_title_info">info</string>
    <string name="create_procedure_activity_title_steps">steps</string>
    <string name="create_procedure_activity_quit_dialog_title">Discard procedure</string>
    <string name="create_procedure_activity_quit_dialog_message">Do you want to discard procedure?</string>
    
    <!-- Add new step activity -->
    <string name="add_new_step_activity_label">Add step</string>
    <string name="add_new_step_activity_title_new">new</string>
    <string name="add_new_step_activity_title_library">library</string>
    
    <!-- Training activity -->
    <string name="training_activity_label">Training</string>
    <string name="training_activity_tab_current_step">current step</string>
    <string name="training_activity_tab_progress">progress</string>
    <string name="training_activity_tab_steps">steps</string>
    <string name="training_activity_tab_results">results</string>
    <string name="training_activity_tab_overview">overview</string>
    <string name="training_activity_go">go</string>
    <string name="training_activity_quit_dialog_title">Quit training</string>
    <string name="training_activity_quit_dialog_message">Are you sure you want to quit training?</string>
    <string name="training_activity_reflection_dialog_title">Reflection</string>
    <string name="training_activity_reflection_dialog_message">Start self-assessment</string>
    <string name="training_activity_user_info_dialog_title">User info</string>
    <string name="training_activity_user_info_dialog_user_id">Your ID is:</string>
    <string name="training_activity_user_info_dialog_enter_username">Please enter username:</string>
    <string name="training_activity_user_info_dialog_username">username</string>
    
    <!-- Reflection activity -->
    <string name="reflection_activity_label">Reflection</string>
    <string name="reflection_activity_title_self_assessment">Self-assessment</string>
    <string name="reflection_activity_title_reality_check">Reality check</string>
    <string name="reflection_activity_title_compare_to_optimal">Optimal</string>
    <string name="reflection_activity_title_reflection_question">Reflection</string>
    <string name="reflection_activity_title_finish">Finish</string>
    <string name="reflection_activity_quit_dialog_title">Quit reflection</string>
    <string name="reflection_activity_quit_dialog_message">Are you sure you want to quit reflection?</string>
    
    <!-- Result preview procedure activity -->
    <string name="result_preview_procedure_activity_title_result">result</string>
    <string name="result_preview_procedure_activity_title_assessment">assessment</string>
    
    <!-- Create procedure info fragment -->
    <string name="create_procedure_info_fragment_hint_title">Title</string>
    <string name="create_procedure_info_fragment_hint_description">Description</string>
    
    <!-- Create step fragment -->
    <string name="create_step_fragment_hint_title">Title</string>
    <string name="create_step_fragment_hint_description">Description</string>
    <string name="create_step_fragment_optimal_time">Optimal time</string>
    
    <!-- Finish reflection fragment -->
    <string name="finish_reflection_fragment_message">Thanks for using WATCHiT</string>
    <string name="finish_reflection_fragment_id_message">Your ID is </string>
    
    <!-- Reflection question fragment -->
    <string name="reflection_question_fragment_question">What could be improved and why?</string>
    <string name="reflection_question_fragment_hint">Type an answer</string>
    
    <!-- Training overview fragment -->
    <string name="training_overview_fragment_duration">Duration:</string>
    <string name="training_overview_fragment_time">00:00:00</string>
    
    <!-- Training progress fragment -->
    <string name="training_progress_fragment_duration">Duration:</string>
    <string name="training_progress_fragment_time">00:00:00</string>
    <string name="training_progress_fragment_progress">Progress:</string>
    <string name="training_progress_fragment_progress_0">0%</string>
    <string name="training_progress_fragment_progress_100">100%</string>
    
    <!-- Training results fragment -->
    <string-array name="training_results_fragment_sort_spinner_array">
        <item>Overview</item>
        <item>Fastest</item>
        <item>Recent</item>
    </string-array>
    
    <!-- Leaderboard fragment -->
    <string-array name="leaderboard_fragment_sort_spinner_array">
        <item>Overview</item>
        <item>Fastest</item>
    </string-array>
    
    <!-- Compare step list header -->
    <string name="compare_step_list_header_step">Step</string>
    <string name="compare_step_list_header_time">Your time</string>
    <string name="compare_step_list_header_optimal">Optimal</string>
    <string name="compare_step_list_header_result">Result</string>
    
    <!-- Reality check step list header -->
    <string name="reality_check_step_list_header_step">Step</string>
    <string name="reality_check_step_list_header_time">Your time</string>
    <string name="reality_check_step_list_header_rating">Rating</string>
    
    <!-- Self assessment step list header -->
    <string name="self_assessment_step_list_header_step">Step</string>
    <string name="self_assessment_step_list_header_rating">Rating</string>
    
    <!-- Training service -->
    <string name="training_service_started">Starting training</string>
    <string name="training_service_label">Training</string>
    <string name="training_service_context">Touch to see progress</string>

    <!-- Step -->
    <string name="step_status_completed">Completed</string>
    <string name="step_status_skipped">Skipped</string>
    <string name="step_status_in_progress">In progress</string>
    <string name="step_status_pending">Pending</string>
    <string name="step_status_paused">Paused</string>
    
    <plurals name="training_steps_fragment_errors">
        <item quantity="one">error</item>
        <item quantity="other">errors</item>
    </plurals> 
    
</resources>
