<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:visibility="gone"
        android:background="@drawable/button_round"
        android:text="@string/button_start" />
    <!-- android:enabled="false" -->
    
    <Button
        android:id="@+id/resume_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:visibility="gone"
        android:background="@drawable/button_round"
        android:text="@string/button_resume" />
    
    <Button
        android:id="@+id/pause_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:visibility="gone"
        android:background="@drawable/button_round"
        android:text="@string/button_pause" />

</RelativeLayout>
