<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/stopwatch"
            android:contentDescription="@string/content_description" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/timerEditText"
            android:layout_alignTop="@+id/imageView"
            android:layout_marginTop="-5dp"
            android:textSize="16sp"
            android:text="@string/training_overview_fragment_duration" />

        <EditText
            android:id="@+id/timerEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="-15dp"
            android:layout_marginBottom="-5dp"
            android:layout_toRightOf="@+id/imageView"
            android:enabled="false"
            android:inputType="time"
            android:textSize="48sp"
            android:text="@string/training_overview_fragment_time" />
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
	    android:layout_marginRight="85dp"
	    android:layout_marginBottom="20dp" >

        <ImageView
            android:id="@+id/stepImageView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:scaleType="centerInside"
	        android:adjustViewBounds="true"
	        android:src="@drawable/camera_photo_placeholder"
        	android:background="@drawable/image_border"
            android:contentDescription="@string/content_description"/>
        
    </RelativeLayout>

</LinearLayout>
