<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="Score:"
        		android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/textView_score"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
	        
            <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="Time:"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	        <TextView
	            android:id="@+id/textView_time"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
	        
            <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="Errors:"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	        <TextView
	            android:id="@+id/textView_errors"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:singleLine="false"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        </TableRow>
        
    </TableLayout>
    
    <TextView
        android:id="@+id/textView_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tableLayout"
        android:layout_margin="10dp"
        android:gravity="center"
   		android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <RelativeLayout
	    android:id="@+id/list_header"
	   	android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout"
	    android:paddingLeft="6dip"
	    android:paddingRight="6dip"
	    android:paddingTop="2dip"
		android:paddingBottom="2dip"
	    android:gravity="center_vertical"
	    android:background="#dddddd" >
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="18sp"
	        android:textStyle="bold"
	        android:text="@string/compare_step_list_header_step" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:textSize="18sp"
	        android:textStyle="bold"
	        android:text="@string/compare_step_list_header_result" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:textSize="18sp"
	        android:textStyle="bold"
	        android:text="@string/compare_step_list_header_optimal" />
	
	</RelativeLayout>
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/list_header" >

    </ListView>
    
</RelativeLayout>
